--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ cft_calc/target/cft_calc-1.0-SNAPSHOT/reebok-crossfit.jpg
 cft_calc/target/cft_calc-1.0-SNAPSHOT/secured/nespresso.js
 cft_calc/target/classes/client.properties
 cft_calc/target/cft_calc-1.0-SNAPSHOT/WEB-INF/appengine-web.xml
+*.suo
+cft_calc/src/main/webapp/bin/cft-calc.dll.config
+cft_calc/src/main/webapp/bin/cft-calc.dll
+cft_calc/src/main/webapp/bin/cft-calc.pdb
+cft_calc/src/main/webapp/bin/cft-calc.pdb
