support isREST flag
security bug!! after 5 login failures, account locked but user is logged
in !! #29
and
https://github.com/OhadR/oAuth2-sample/issues/43

--- a/cft_calc/src/test/resources/client.properties
+++ b/cft_calc/src/test/resources/client.properties
@@ -2,7 +2,7 @@
 
 com.ohadr.auth-flows.linksExpirationMinutes=60
 com.ohadr.auth-flows.maxAttempts=5
-
+com.ohadr.auth-flows.isREST=true
 
 # Crypto settings
 com.ohadr.crypto.keystore=./irrelevant
