--- a/cft_calc/src/main/resources/client.properties
+++ b/cft_calc/src/main/resources/client.properties
@@ -1,7 +1,7 @@
 
 com.ohadr.auth-flows.linksExpirationMinutes=60
 com.ohadr.auth-flows.maxAttempts=5
-
+com.ohadr.auth-flows.isREST=true
 
 # Crypto settings
 com.ohadr.crypto.keystore=./irrelevant
