--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-*.prefs
-*.component
-*.launch
-*.container
-*.name
-cft_calc/.settings/.jsdtscope
-cft_calc/.settings/org.eclipse.wst.common.project.facet.core.xml
-*.jar
+cft_calc/.settings/
 cft_calc/target/
-*.class
-*.suo
 cft_calc/src/main/webapp/bin/
 cft_calc/src/main/webapp/packages/
 cft_calc/src/main/webapp/obj/
 cft_calc/src/main/webapp/cft-calc.csproj.user
+*.classpath
+*.project
