add accountActivatedEndpointUrl prop
related to : https://github.com/OhadR/oAuth2-sample/issues/47

--- a/cft_calc/src/main/resources/client.properties
+++ b/cft_calc/src/main/resources/client.properties
@@ -3,6 +3,8 @@ com.ohadr.auth-flows.linksExpirationMinutes=60
 com.ohadr.auth-flows.maxAttempts=5
 com.ohadr.auth-flows.isREST=true
 
+com.ohadr.auth-flows.endpoints.accountActivatedEndpointUrl=login/accountActivated.htm
+
 # Crypto settings
 com.ohadr.crypto.keystore=./irrelevant
 com.ohadr.crypto.password=kspass
