--- a/cft_calc/src/main/resources/client.properties
+++ b/cft_calc/src/main/resources/client.properties
@@ -3,7 +3,7 @@ com.ohadr.auth-flows.linksExpirationMinutes=60
 com.ohadr.auth-flows.maxAttempts=5
 com.ohadr.auth-flows.isREST=true
 
-com.ohadr.auth-flows.endpoints.accountActivatedEndpointUrl=login/accountActivated.htm
+com.ohadr.auth-flows.endpoints.accountActivatedEndpointUrl=app/authentication/accountActivated.html
 
 # Crypto settings
 com.ohadr.crypto.keystore=./irrelevant
