AccountActivation: clicking on activation link leads to "old" html page #38

--- a/cft_calc/src/main/resources/client.properties
+++ b/cft_calc/src/main/resources/client.properties
@@ -3,7 +3,7 @@ com.ohadr.auth-flows.linksExpirationMinutes=60
 com.ohadr.auth-flows.maxAttempts=5
 com.ohadr.auth-flows.isREST=true
 
-com.ohadr.auth-flows.endpoints.accountActivatedEndpointUrl=app/authentication/accountActivated.html
+com.ohadr.auth-flows.endpoints.accountActivatedEndpointUrl=/#/accountActivated
 
 # Crypto settings
 com.ohadr.crypto.keystore=./irrelevant
