--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 cft_calc/.settings/
+cft_calc/eclipse-launch-profiles
 cft_calc/target/
 cft_calc/src/main/webapp/bin/
 cft_calc/src/main/webapp/packages/
