read pass-policy from config file
related to https://github.com/OhadR/oAuth2-sample/issues/48

--- a/cft_calc/src/main/resources/client.properties
+++ b/cft_calc/src/main/resources/client.properties
@@ -10,3 +10,16 @@ com.ohadr.crypto.keystore=./irrelevant
 com.ohadr.crypto.password=kspass
 com.ohadr.crypto.keyAlias=ohadr
 com.ohadr.crypto.createKeystoreFileIfNotExist=false
+
+
+# password policy
+com.ohadr.auth-flows.policy.passwordLifeInDays=30
+com.ohadr.auth-flows.policy.passwordMinLength=1
+com.ohadr.auth-flows.policy.passwordMaxLength=10
+com.ohadr.auth-flows.policy.passwordMinUpCaseChars=0
+com.ohadr.auth-flows.policy.passwordMinLoCaseChars=0
+com.ohadr.auth-flows.policy.passwordMinDigits=0
+com.ohadr.auth-flows.policy.passwordMinSpecialSymbols=0
+com.ohadr.auth-flows.policy.passwordBlackList=
+com.ohadr.auth-flows.policy.rememberMeTokenValidityInDays=30
+com.ohadr.auth-flows.policy.passwordMaxEntryAttempts=5
