add com.ohadr.auth-flows.email.fromField #48
https://github.com/OhadR/oAuth2-sample/issues/55

--- a/cft_calc/src/main/resources/client.properties
+++ b/cft_calc/src/main/resources/client.properties
@@ -2,6 +2,7 @@
 com.ohadr.auth-flows.linksExpirationMinutes=60
 com.ohadr.auth-flows.maxAttempts=5
 com.ohadr.auth-flows.isREST=true
+com.ohadr.auth-flows.email.fromField=C-Benchmarkr Admin
 
 com.ohadr.auth-flows.endpoints.accountActivatedEndpointUrl=/#/accountActivated
 
