--- a/cft_calc/src/main/resources/log4j.properties
+++ b/cft_calc/src/main/resources/log4j.properties
@@ -1,10 +1,13 @@
-log4j.rootLogger=DEBUG, CONSOLE 
+log4j.rootLogger=INFO, CONSOLE 
 
-log4j.logger.com.ohadr=DEBUG, CONSOLE
-log4j.additivity.com.ohadr=false
+# log4j.logger.com.ohadr.auth_flows=INFO, CONSOLE
+# log4j.additivity.com.ohadr=false
 
-log4j.logger.org.springframework=INFO, CONSOLE
-log4j.additivity.org.springframework=false
+# log4j.logger.com.ohadr.cbenchmarkr=INFO, CONSOLE
+# log4j.additivity.com.ohadr=false
+
+# log4j.logger.org.springframework=INFO, CONSOLE
+# log4j.additivity.org.springframework=false
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender 
