--- a/cft_calc/pom.xml
+++ b/cft_calc/pom.xml
@@ -34,19 +34,6 @@
         </dependency>
 
         <dependency>
-			<groupId>com.ohadr</groupId>
-			<artifactId>authentication-flows</artifactId>
-			<version>${ohadr.flows.version}</version>
-			<exclusions>
-			    <exclusion>
-					<groupId>javax.mail</groupId>
-					<artifactId>mail</artifactId>
-			    </exclusion>
-			</exclusions>
-		</dependency>
-		
-        
-        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>${ohadr.spring.security.version}</version>
@@ -182,8 +169,20 @@
 			<version>1.9.1</version>
 		</dependency>
         		
-        
-        
+		<!-- velocity (template email msg) -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.6.2</version>
+		</dependency>        
+
+		<!-- Pair impl-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+
 
         <!-- Test Dependencies -->
         <dependency>
@@ -243,13 +242,11 @@
                 -->
             </plugin>
 
-            <!-- 
             <plugin>
                 <groupId>com.google.appengine</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
                 <version>${appengine.target.version}</version>
             </plugin>
-             -->
         </plugins>
     </build>
 
