detach authentication-flows -cont'
1. replace auth-flows' GAEMailSenderImpl with local impl
2. replace apache's NotImplementedException
withnsupportedOperationException
3. remove un-needed methods (handleNotSeenForaWhileUsers())
4. remove client.properties all auth-flows props (and add social's)
5. authentication-manager: no authentication-provider is needed because
i do not load users from spring-security. so no need password-encoder,
and all other beans that are relevant for authentication (e.g.
logoutFilter)
6. as I removed the userDetailsServices, I had to remove the "remember
me" bean for spring-social.

--- a/cft_calc/src/main/resources/client.properties
+++ b/cft_calc/src/main/resources/client.properties
@@ -1,11 +1,3 @@
-
-com.ohadr.auth-flows.linksExpirationMinutes=60
-com.ohadr.auth-flows.maxAttempts=5
-com.ohadr.auth-flows.isREST=true
-com.ohadr.auth-flows.email.fromField=C-Benchmarkr Admin
-
-com.ohadr.auth-flows.endpoints.accountActivatedEndpointUrl=/#/accountActivated
-
 # Crypto settings
 com.ohadr.crypto.keystore=./irrelevant
 com.ohadr.crypto.password=kspass
@@ -13,14 +5,5 @@ com.ohadr.crypto.keyAlias=ohadr
 com.ohadr.crypto.createKeystoreFileIfNotExist=false
 
 
-# password policy
-com.ohadr.auth-flows.policy.passwordLifeInDays=-1
-com.ohadr.auth-flows.policy.passwordMinLength=1
-com.ohadr.auth-flows.policy.passwordMaxLength=10
-com.ohadr.auth-flows.policy.passwordMinUpCaseChars=0
-com.ohadr.auth-flows.policy.passwordMinLoCaseChars=0
-com.ohadr.auth-flows.policy.passwordMinDigits=0
-com.ohadr.auth-flows.policy.passwordMinSpecialSymbols=0
-com.ohadr.auth-flows.policy.passwordBlackList=
-com.ohadr.auth-flows.policy.rememberMeTokenValidityInDays=30
-com.ohadr.auth-flows.policy.passwordMaxEntryAttempts=5
+facebook.clientId=
+facebook.clientSecret=
